# philosopher-chat

./: README.md  pyproject.toml
api/: main.py  shcemas.py
examples/: usage.py
philosopher_chat/: __main__.py  philosopher_chat.py
philosopher_chat/core/: exceptions.py  system.py
philosopher_chat/core/entities/: chat.py  chat_completer.py  message.py  philosopher.py  user.py
philosopher_chat/core/utils/: prompt_loading.py
philosopher_chat/data/: philosophers.json  prompt_template.yaml
philosopher_chat/io_handlers/: console_io_handler.py
src/: philo_chat.py
src/cli/: cli.py
src/core/entities/: chat.py  user.py
