[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philosopher-chat"
version = "0.1.2"
authors = [{ name = "Erfan Moosavi", email = "erfanmoosavi84@gmail.com" }]
description = "Chat with philosophers!"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["philosopher_chat*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"philosopher_chat" = ["prompts/*.yaml", "py.typed"]
