[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philosopher-chat"
version = "0.2.0"
authors = [{ name = "Erfan Moosavi", email = "erfanmoosavi84@gmail.com" }]
description = "Chat with philosophers!"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]==0.129.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",
]

[project.scripts]
philosopher-chat = "philosopher_chat.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["philosopher_chat*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"philosopher_chat" = ["data/*.json", "data/*.yaml", "py.typed"]
